# amplifier-module-hooks-otel

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
amplifier_module_hooks_otel/: __init__.py  attributes.py  config.py  exporters.py  metrics.py  spans.py  telemetry.py
tests/: __init__.py  conftest.py  test_attributes.py  test_config.py  test_exporters.py  test_hook.py  test_metrics.py  test_payload_limits.py  test_sensitive_data.py  test_spans.py  test_telemetry.py
